syntax = "proto3";

package io.harness.eventsframework.featureflag;

option java_multiple_files = true;
option go_package = "950_events_api";

message FeatureFlagChangeDTO {
  string accountId = 1;
  string featureName = 2;
  bool enable = 3;
}